maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:9: error: not found: value index
  for (i <- index to width  - 1){
            ^JediEscaper:24: error: not found: value xStart
 var x = xStart
         ^JediEscaper:25: error: not found: value yStart
 var y = yStart
         ^